--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
 <resources>
     <string name="app_name">Ghost</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="user_turn">Your turn</string>
+    <string name="computer_turn">Computer's Turn</string>
+    <string name="load_dictionary_failed">Could not load dictionary</string>
 </resources>
